coupon align fixed

--- a/app/assets/stylesheets/section/checkout.scss
+++ b/app/assets/stylesheets/section/checkout.scss
@@ -1034,7 +1034,7 @@ section#cart {
         a {text-decoration: underline;color:#000;}
       }
     }
-
+    table.aplicarCupom {width:100%;}
   }
 
   a.continue {
